--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <span class="logo">Rahul Arya</span>
+                <span></span>
                 <ul id="sidemenu">
                     <li><a href="#header"><span>H</span>ome</a></li>
                     <li><a href="#about"><span>A</span>bout</a></li>
@@ -25,8 +25,11 @@
             </nav>
 
             <div class="header-text">
-                <h1>Hi, I'm <span>Rahul Arya</span></h1>
-                <p><span>UI / UX</span> Designer</p>
+                <h1>Hi, It's <span>Rahul Arya</span></h1>
+                                  <h2 class="text-animation">I'm a <span> </span></h2>
+                                      <!-- <h3> I am a web developer with years of experience in creating and managing websites. 
+                                          My skills include coding in HTML, CSS, and JavaScript, as well as working with 
+                                          CMSs like WordPress and Drupal.</h3> -->
             </div>
             <a href="Resume.pdf" class="download-cv-btn" download>Download CV</a>
         </div>
@@ -115,7 +118,7 @@
             </div>
             <div>
                 <i class="fa-brands fa-app-store-ios"></i>
-                <h2><span>App</span> Designing</h2>
+                <h2><span>Web</span> Development</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, excepturi. Assumenda quidem, laboriosam sapiente obcaecati magnam voluptate repellendus, cum vitae laborum soluta voluptatibus eveniet sint blanditiis maiores id quo officiis?</p>
                 <a href="#">Learn More</a>
             </div>
