--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Languages</span><br>HTML, CSS, Typescript, Python, SQL, PHP</li>
+                            <li><span>Languages</span><br>HTML, CSS, Tailwind CSS, Python, SQL, PHP</li>
                             <li><span>Framwork</span><br>React JS, Node JS, Pandas, Numpy, Django, Bootstrap, Jquery</li>
                             <li><span>Platforms</span><br>Visual Studio Code, Jupyter Notebook, Sublime</li>
                             <li><span>Tools</span><br>Github, Apache, Excel, VBA, MySQL, Photoshop, Power BI, Google Sheets, Google Forms</li>
